Progress: first two symbol tests pass